2022-11-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-intro): rewrote the section about
	keybinds.

2022-11-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-sexp-klts, eeklts): new functions.

	* eev-code.el (ee-code-c-d-:anchor, ee-code-c-d-:info): added more
	comments.

2022-11-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-sexp-klfs): fixed a bug.

2022-11-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hydras.el (ee-edit-index-hydra): added <right>, <left>, SPC,
	and DEL.

	* eev-code.el: added a (code-c-d "org" ...).

	* eev-tlinks.el (find-kla-links): new function.

2022-11-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-sexp-kla, ee-kl-sexp-klas, ee-kl-sexp-klf):
	fixed the missing ":fname" arguments.

2022-11-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hydras.el (eev-index-edit): renamed to `ee-edit-index'.
	(eev-index-replace): renamed to `ee-edit-index-replace'.
	(hydra-eev-index-edit): renamed to `ee-edit-index-hydra'.
	(find-eev-index-edit-intro): deleted.

	* eev-intro.el (find-edit-index-intro): new function.

	* eepitch.el (eepitch-gnuplot): use `ee-with-pager-cat'.

2022-11-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-kla-intro): several new sections.

	* eev-kla.el (ee-kl-link-to-string-with-comment): new function.
	(ee-kla2-bol): renamed to `ee-kla2-goto-bol'.

2022-11-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-transforms): new variable.
	(ee-kl-transform): new function.
	(ee-kl-expand): use `ee-kl-transform'.
	(ee-kl-format2-for-mode): deleted.
	(ee-kl-comment-prefix): new function.
	(ee-kl-insert): rewritten.
	(ee-kl-format1, ee-kl-format2, ee-preferred-c)
	(ee-preferred-c-guess): all these variables were deleted.
	(ee-kl-format1): deleted this function.
	(ee-kl-kill): don't call `ee-kl-format1' - always add a newline.
	(ee-kl-sexp-to-string): deleted.
	(ee-kl-lrcds, ee-kl-lrcd, ee-kl-r, ee-kl-c, ee-kl-d)