@@ -1,7 +1,8 @@
 2022-11-28  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (find-eev-intro): rewrote the section about
-	keybinds.
+	keybindings.
+	(find-eev-install-intro): new section: "0. Loading eev".
 
 2022-11-27  Eduardo Ochs  <eduardoochs@gmail.com>
 
